--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4th Grade Study Site</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="main-container">
-        <header>
-            <h1>4th Grade Study Site</h1>
-            <p>Learn with Fun & Creativity</p>
-        </header>
-
-        <div id="subjects"></div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
+Hello World
