--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div id="main-container">
         <header>
-            <h1>Study Site</h1>
+            <h1>Study Site for 6th Graders
+        </h1>
             <p>Learn with flashcards!</p>
         </header>
         <div id="subjects"></div> <!-- This is where the flashcards will be injected -->
